# cmd2tvc

./: .gitignore  README.md  captions.py  cmd2tvc.py  cmd_info.py  features.py  optioner.py  pyproject.toml  subtitles.py  tvc_info.py  utils.py
info/: cmd_info.py  tvc_info.py
test/: descriptions.csv  durations.csv
test/metadata/: descriptions.csv  durations.csv
test/videos/2013/: lqdyZpgCnXQ.en.srt
test/videos/2020/: TGghm3K1NXQ.srt
